round 63 §6: the deployed audit sink is 79% text — and one call is worth 2.2×
Every audit figure so far used a no-op sink, i.e. the cost of building a record
and dropping it. This wires Mongoose's own ChronicleAuditCaptureService through
its public API — attach/start, production AgronaCountersService, a real
memory-mapped queue — onto the same 30-node shared-tail graph, changing only the
sink. 736.6 ns/event, 221.5 bytes/record, 24 B/event allocated.

Decomposed into one arm per prefix of onRecord: asCharSequence is 3.6 ns (the
text was already built during the cycle — the "no-op" baseline was never audit
without text), bookkeeping is 28.7, and the Chronicle document write is 571.3 —
98% of the sink.

A bare-appender probe with no Fluxtion in it says why. A 221-byte blob and a
221-char wire string put identical bytes on identical pages: 96.8 ns against
665.0. It is not I/O, not page faults, not append overhead. It is
ValueOut.text(CharSequence), at ~2.6 ns per character. The confident prediction
that it was page-faulting is falsified in the notes.

So text(cs) -> bytes(buf) measures 748 -> 341 ns/event, 2.20×, zero allocation,
byte-identical queue file. Predicted 2.6× and missed, because the arithmetic
budgeted nothing for the char->byte copy; a copyonly arm prices that at 54.5 ns
and the model then closes to 1.5%.

Also recorded: Instant.now() per record is 3% of the time and 100% of the
allocation; and the prompt's assumption that the analyser reads Chronicle is
wrong — ReaderRegistry has only YamlAuditReader, UP-RDR-01 is unfiled, so the
decode half could not be tested. Which is why the write-side format choice is
still free to make.

GraalVM 25.0.4 is no longer on this machine; §6 is JIT-only on OpenJDK 25.0.2
and says so, along with the module flags Chronicle needs on 25.