@@ -127,3 +127,212 @@ the JIT audit runs used bare `java` and silently got Corretto 21. One line of ou
 That is the second time today a measurement was invalidated by an unstated input (the first was
 `--attempts 1` on the node-count sweep). Both were caught by someone questioning the result rather than
 by the harness.
+
+## 6. The real sink: Mongoose's Chronicle capture service
+
+Every audit figure above uses a **no-op sink** — the cost of *building* a record and dropping it. The
+owner's question was the obvious next one: Mongoose already ships an encoder
+(`ChronicleAuditCaptureService`), and the deployed cost is build **plus** encode **plus** write.
+
+Wired through the service's own public API — `attach(dataFlow, name)` / `start(name)`, production
+`AgronaCountersService`, a real memory-mapped queue on disk — on the **same** 30-node / 5-event /
+shared-tail graph as §6's tail arms, changing **only** the sink.
+
+### 6.1 Predictions, recorded before the decomposition ran
+
+The two end points were already measured when these were written (no-op 156.7, Chronicle 736.6, so the
+sink adds **~580 ns**). What was *not* known is where the 580 goes. `onRecord` does five things:
+`asCharSequence()`, `writingDocument()/text()/close()`, `AtomicLong.incrementAndGet()`,
+`Instant.now()`, `MongooseCounter.increment()`.
+
+| # | Prediction | Basis |
+|---|---|---|
+| V1 | `asCharSequence()` alone adds **< 30 ns** | the text is already built by `auditLog.info(k,v)` during the cycle; this only terminates the record |
+| V2 | the bookkeeping trio (AtomicLong + `Instant.now()` + counter) adds **50–90 ns** | `Instant.now()` is a clock read plus a 24 B allocation; the rest are single increments |
+| V3 | the Chronicle document write is **the dominant term, > 400 ns** | it is the only part that touches a memory-mapped file and UTF-8-encodes 221 bytes |
+| V4 | allocation is **24 B/event and all of it is `Instant.now()`** | measured 24.003 B/event; `Instant` is exactly 24 B and is the only allocation on the path |
+| V5 | removing `Instant.now()` alone recovers **> 40 ns and all the allocation** | it is a liveness display field, not part of the record |
+
+V4 and V5 are the ones with a fix attached: if they hold, the encoder is one line away from zero-GC.
+
+### 6.2 Results — the write is everything, the rest is noise
+
+OpenJDK 25.0.2, JIT, 2 reps × 2M events after 500k warm, 30-node shared-tail graph, minimal audit
+profile. Each arm is a `LogRecordListener` doing a strict prefix of `onRecord`'s work.
+
+| Arm | ns/event | Δ vs previous | alloc B/event | what it does |
+|---|---:|---:|---:|---|
+| `noop` | 151.7 | — | 0 | discard the record |
+| `cs` | 155.3 | **+3.6** | 0 | `asCharSequence()` |
+| `book` | 184.0 | **+28.7** | **24** | + AtomicLong + `Instant.now()` + Agrona counter |
+| `queue` | 726.6 | **+571.3** | 0 | `cs` + the Chronicle document write |
+| `noinstant` | 714.0 | — | 0 | everything except `Instant.now()` |
+| `full` | 734.1 | +20.1 over `noinstant` | **24** | a faithful re-implementation of `onRecord` |
+
+The service wired through its own public API (`attach`/`start`, production `AgronaCountersService`,
+real queue on disk) measured **736.6 ns** — `full` reproduces it to within 0.4%, so the decomposition
+is measuring the real thing.
+
+### 6.3 Scoring
+
+| # | Predicted | Measured | |
+|---|---|---|---|
+| V1 | `asCharSequence()` < 30 ns | **+3.6 ns** | ✅ |
+| V2 | bookkeeping trio 50–90 ns | **+28.7 ns** | ❌ low by ~2× |
+| V3 | the document write dominates, > 400 ns | **+571.3 ns — 98% of the sink** | ✅ |
+| V4 | allocation is 24 B and all of it is `Instant.now()` | `book` allocates 24 B with no queue; `queue` allocates 0; `full` 24 | ✅ |
+| V5 | dropping `Instant.now()` recovers > 40 ns **and** all allocation | **all the allocation, but only 20 ns** | ➗ half |
+
+**V1 is the one worth stating plainly.** `asCharSequence()` costs 3.6 ns because the text was already
+built — `auditLog.info(k, v)` appends into the record's own `StringBuilder` during the cycle, and the
+sink only terminates it. The 151.7 ns baseline is *already* a fully-rendered 221-byte text record. The
+no-op arm was never "audit without the text cost"; it was "text built, nothing done with it".
+
+**The fix V4/V5 points at is still worth making** and is one line: `Instant.now()` per record buys a
+liveness timestamp for a monitoring display and costs the encoder its zero-GC property. A
+`System.currentTimeMillis()` long, or a stamp taken on the reader side, gives the same display for
+0 bytes. It is 3% of the time and 100% of the allocation.
+
+### 6.4 The number that actually matters, and the next question
+
+**571 ns to append 221 bytes.** Chronicle Queue is not a 571 ns/append product — it is sold in the
+low hundreds of nanoseconds and below. So either the cost is *per byte* (the record is large and the
+run writes **553 MB in ~1.5 s**, faulting in freshly-mapped pages), or it is *per append* (queue
+header, index, roll checks) and the record size is incidental.
+
+That distinction decides whether the binary record discussed earlier is worth building, so it gets its
+own predictions before anything is measured:
+
+| # | Prediction | Basis |
+|---|---|---|
+| W1 | a standalone 221-char append reproduces the in-graph cost, **500–650 ns** | if it does not, the cost is not in the appender and §6.2's attribution is wrong |
+| W2 | a 32-char append is **< 200 ns** | if cost tracks bytes, a 7× smaller record should be several times cheaper |
+| W3 | an 8-byte binary `long` append is **< 120 ns** | the floor of the appender itself |
+| W4 | the dominant term is **page-faulting newly mapped file pages**, not encoding | 553 MB touched in 1.5 s is ~360 MB/s of first-touch |
+
+W2 and W3 are the binary-record case. If they land, a compact binary record is worth roughly the ratio
+between them and 571 ns; if they come out flat near 571, record size is irrelevant and the answer is to
+write fewer records, not smaller ones.
+
+### 6.5 Results — it is the text encoder, and only the text encoder
+
+No Fluxtion in this probe at all: a bare Chronicle appender, same JVM, 2 reps × 2M appends.
+
+| Shape | ns/append | bytes on disk | vs `long8` |
+|---|---:|---:|---:|
+| `long8` — one `int64` | **70.5** | 33.6 | 1.0× |
+| `bytes32` — a 32-byte blob | **79.7** | 60.5 | 1.1× |
+| `bytes221` — a **221-byte blob** | **96.8** | **248.4** | 1.4× |
+| `text32` — a 32-char wire string | **148.7** | 60.5 | 2.1× |
+| `text221` — a **221-char wire string** | **665.0** | **248.4** | **9.4×** |
+
+Read the last two rows together. `bytes221` and `text221` put **the same number of bytes on the same
+disk** — 248.4 each. One costs 96.8 ns, the other 665.0. Nothing about I/O, page faults, file growth
+or append overhead can explain a 6.9× gap between two runs that write identical volume.
+
+| # | Predicted | Measured | |
+|---|---|---|---|
+| W1 | standalone 221-char append reproduces the in-graph cost, 500–650 ns | **665** — attribution reproduced, band 2% low | ➗ |
+| W2 | 32-char append < 200 ns | **148.7** | ✅ |
+| W3 | 8-byte binary append < 120 ns | **70.5** | ✅ |
+| W4 | the dominant term is page-faulting newly mapped pages | **falsified** — same bytes, same pages, 6.9× apart | ❌ |
+
+**The cost is `ValueOut.text(CharSequence)` — character-by-character wire-string encoding, ~2.6 ns per
+character.** Not the disk, not the queue, not Fluxtion. W4 was the confident one and it was wrong; it
+was wrong in the useful direction, because "it is the disk" would have closed the question and "it is
+the encoder" opens a fix.
+
+This is the same shape as the `TextProbe` result from earlier in the day — text formatting is the
+expensive thing on every path measured, and it is expensive again here, in someone else's library.
+
+### 6.6 What a binary record is worth — predictions
+
+Two independent text costs sit on the audited path, and each has a separate fix:
+
+1. **Sink side, ~571 ns**: the record is handed to Chronicle as a *wire string*. Handing the same
+   bytes over as an opaque blob is a Mongoose-side change of one call — `text(cs)` → `bytes(...)` —
+   and the queue file contains the same content either way.
+2. **Graph side, ~142 ns**: the 151.7 ns baseline is *not* "audit without text". `auditLog.info(k, v)`
+   renders into the record's `StringBuilder` as the cycle runs, so by the time the sink sees it the
+   221 characters already exist. The no-audit arm on this graph is 10.0 ns (JIT). The other ~142 ns is
+   building the text.
+
+Only (1) is measurable without a core change, so only (1) gets measured now.
+
+| # | Prediction | Basis |
+|---|---|---|
+| X1 | a `binbytes` arm — identical to `full`, but `bytes(...)` instead of `text(cs)` — lands at **230–280 ns/event** | 151.7 baseline + ~97 ns `bytes221` append + ~29 ns bookkeeping |
+| X2 | that is **≥ 2.6× faster than `full`** end-to-end | 734.1 ÷ ~275 |
+| X3 | it stays **zero-allocation** if `Instant.now()` goes with it | §6.3 V4 |
+| X4 | the queue file is **the same size**, ±2% | the same characters, carried differently |
+
+### 6.7 Results — the one-call change is worth 2.2×, and the copy loop is why it is not 2.6×
+
+`binbytes` is `full` with `text(cs)` replaced by a copy into a reused direct `Bytes` buffer and
+`bytes(buf)`. Same content, same queue, same everything else.
+
+| Arm | ns/event | alloc B/event | queue B/event |
+|---|---:|---:|---:|
+| `full` (same session) | 748.4 | 24.003 | 221.5 |
+| **`binbytes`** | **340.7** | **0.004** | **221.5** |
+
+| # | Predicted | Measured | |
+|---|---|---|---|
+| X1 | 230–280 ns/event | **340.7** — 24% high | ❌ |
+| X2 | ≥ 2.6× faster than `full` | **2.20×** | ❌ |
+| X3 | zero-allocation | **0.004 B/event** | ✅ |
+| X4 | same file size ±2% | **221.5 vs 221.5, exact** | ✅ |
+
+X1 and X2 missed for one reason, and it was measurable: a `copyonly` arm — copy the characters into
+the buffer and write nothing — costs **212.5 ns against `cs`'s 158.0**, so the char→byte loop is
+**54.5 ns** (0.25 ns/char). X1's arithmetic budgeted zero for it.
+
+With that term the model closes:
+
+```
+151.7  graph + record build
+  3.6  asCharSequence()
+ 54.5  char -> byte copy      <- the term X1 forgot
+ 29.0  bookkeeping (AtomicLong + Instant + counter)
+ 96.8  bytes221 append
+------
+335.6  predicted   vs   340.7 measured   (1.5%)
+```
+
+### 6.8 Standing conclusions
+
+**On the deployed audit path, ~79% of the cost is text.** 571 ns of wire-string encoding in the sink,
+plus ~142 ns building the characters during the cycle, on a graph that runs in 10.0 ns.
+
+Three changes, in ascending order of how much they cost to make:
+
+| Change | Where | Worth | Measured? |
+|---|---|---|---|
+| `Instant.now()` → a `long` millis, or stamp on the reader | Mongoose, 1 line | 20 ns and **all** the allocation | yes — §6.3 |
+| `text(cs)` → `bytes(buf)` | Mongoose, ~6 lines | **2.20×** end-to-end, 748 → 341 | yes — §6.7 |
+| a record carrying values, not characters | Fluxtion core + a reader | the remaining ~142 ns build **and** the 54.5 ns copy | **no** — needs a core change |
+
+Only the first two are claims. The third is arithmetic on measured parts and is written here as a
+hypothesis, not a result.
+
+### 6.9 A correction to the record
+
+The prompt for this section assumed the analyser reads Chronicle audit logs. **It does not.**
+`ReaderRegistry` registers exactly one reader — `new YamlAuditReader()` — and
+`docs/proposals/upstream-asks.md` still lists **UP-RDR-01 (the Chronicle reader)** among the asks that
+have not been filed. So the encoder measured here writes a queue that nothing in this repo can open
+yet; the decode half of the question could not be tested because the decoder does not exist.
+
+That makes §6.7 more interesting rather than less: the format on the wire is still unfixed, so
+choosing `bytes` over `text` costs nothing in compatibility today and is 2.2× on the write side.
+
+### 6.10 Method note — the JDK moved under the benchmark, again
+
+GraalVM 25.0.4 is **no longer installed on this machine**, so every figure in §6 is JIT-only, on
+OpenJDK 25.0.2. The native+PGO arms of §5 could not be re-run and nothing here should be compared to
+them without rebuilding that toolchain. §5.3 recorded that an unstated JDK invalidated a day of
+measurements; this time the JDK is stated in the section, and the missing one is stated too.
+
+Chronicle also needs a long list of `--add-opens` / `--add-exports` on JDK 25 (`java.base/jdk.internal.misc`
+for Agrona, `java.lang.reflect` for Chronicle core). That is worth knowing before anyone proposes it as
+a native-image target.
